<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="logo_content_description">Image of a hand dropping a paper to a box</string>
    <string name="election_name">Election name</string>
    <string name="election_event_date_example">Tue Feb 08 00:00:00 CST 2022</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="example_state">California</string>
    <string name="example_city">Sacramento</string>
    <string name="example_zip">95814</string>
    <string name="example_address_line1">1500 11th Street, 5th Floor</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to use your current location.</string>
    <string name="no_internet_access">No internet access.</string>
    <string name="button_search">Find my representatives</string>
    <string name="button_location">Use my location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="office_name_example">Persident of the United States</string>
    <string name="representative_name_example">Joe Doe</string>
    <string name="representative_party_example">Democratic party</string>
    <string name="representative_photo">Representative photo</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="www_icon">WWW Icon</string>
</resources>
