<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{voterInfoViewModel.voterInfo.election.name}"
            app:titleTextColor="@color/white"
            tools:title="@string/election_name" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@{voterInfoViewModel.voterInfo.election.electionDay.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="@string/election_event_date_example" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/election_information"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/voting_locations"
            app:layout_constraintEnd_toEndOf="@+id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ballot_information"
            app:layout_constraintEnd_toEndOf="@+id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/correspondence_address"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/state_ballot"
            app:layout_constraintStart_toStartOf="@+id/state_ballot"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address_line1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{voterInfoViewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.line1}"
            app:layout_constraintEnd_toEndOf="@+id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@+id/state_correspondence_header"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="@string/example_address_line1" />

        <TextView
            android:id="@+id/address_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{voterInfoViewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.zip}"
            app:layout_constraintStart_toStartOf="@+id/address_line1"
            app:layout_constraintTop_toBottomOf="@id/address_line1"
            tools:text="@string/example_zip" />

        <TextView
            android:id="@+id/address_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{voterInfoViewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.city}"
            app:layout_constraintEnd_toEndOf="@+id/address_line1"
            app:layout_constraintStart_toEndOf="@+id/address_zip"
            app:layout_constraintTop_toBottomOf="@id/address_line1"
            tools:text="@string/example_city" />

        <TextView
            android:id="@+id/address_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{voterInfoViewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.state}"
            app:layout_constraintEnd_toEndOf="@+id/address_city"
            app:layout_constraintStart_toStartOf="@+id/address_zip"
            app:layout_constraintTop_toBottomOf="@id/address_zip"
            tools:text="@string/example_state" />

        <Button
            android:id="@+id/save_election_button"
            style="@style/ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/follow_election"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>