<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

        <variable
            name="clickListener"
            type="com.example.android.politicalpreparedness.representative.adapter.RepresentativeListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(representative)}"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding">

        <androidx.cardview.widget.CardView
            android:id="@+id/representative_photo_container"
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            app:cardCornerRadius="@dimen/photo_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/representative_photo"
                android:layout_width="@dimen/photo_size"
                android:layout_height="@dimen/photo_size"
                profileImage="@{representative.official.photoUrl}"
                tools:srcCompat="@drawable/ic_profile"
                android:contentDescription="@string/representative_photo" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/office_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@{representative.office.name}"
            android:textStyle="bold"
            tools:text="@string/office_name_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representative_photo_container"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/representative_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@{representative.official.name}"
            tools:text="@string/representative_name_example"
            app:layout_constraintEnd_toStartOf="@+id/www_icon"
            app:layout_constraintStart_toStartOf="@+id/office_name"
            app:layout_constraintTop_toBottomOf="@+id/office_name" />

        <TextView
            android:id="@+id/representative_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{representative.official.party}"
            tools:text="@string/representative_party_example"
            app:layout_constraintEnd_toEndOf="@+id/representative_name"
            app:layout_constraintStart_toStartOf="@+id/representative_name"
            app:layout_constraintTop_toBottomOf="@+id/representative_name" />

        <ImageButton
            android:id="@+id/twitter_icon"
            style="@style/SocialIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintBottom_toBottomOf="@+id/representative_party"
            app:layout_constraintEnd_toEndOf="@+id/office_name"
            app:layout_constraintTop_toBottomOf="@+id/office_name"
            app:srcCompat="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_icon" />

        <ImageButton
            android:id="@+id/facebook_icon"
            style="@style/SocialIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/twitter_icon"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:layout_constraintTop_toTopOf="@+id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_icon" />

        <ImageButton
            android:id="@+id/www_icon"
            style="@style/SocialIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:layout_constraintTop_toTopOf="@+id/facebook_icon"
            app:srcCompat="@drawable/ic_www"
            android:contentDescription="@string/www_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>